# 2022_11_17_TEST_CASE

./: README.md  duration.txt
project_1/: .coverage  pyproject.toml
project_1/project_1/: main.py
project_1/tests/: single_link.txt  strings.txt  test_main.py
