[tool.poetry]
name = "project-1"
version = "0.1.0"
description = ""
authors = ["LucasSteinach <steinach@mail.ru>"]
readme = "README.md"
packages = [{include = "project_1"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
